# GLTF-Loader

./: .gitignore  CMakeLists.txt
src/Loader/: Loader.cpp
src/Manager/: Buffer.cpp  Scene.cpp
src/Reader/: Reader.cpp
test/: main.cpp
